--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -18,5 +18,5 @@ jobs:
           architecture: x64
       - name: Grant execute permission for gradlew
         run: chmod +x gradlew
-      - name: Build with Gradle
+      - name: Build and Test with Gradle
         run: ./gradlew clean build test
